subdir('asio')
subdir('utils')
subdir('http')
subdir('websocket')
subdir('matrix')
subdir('signaling')
subdir('rtc')
#subdir('v4l2_hw_h264')
#subdir('rpi_h264_encoder')
subdir('temporary_room')
subdir('version')
subdir('client')
if get_option('with_ui')
  subdir('video_layout')
endif
subdir('app')
subdir('ssl_test')

